--- a/_data/open_positions.yml
+++ b/_data/open_positions.yml
@@ -65,3 +65,8 @@
   category: Business Strategy & Operations
   location: Remote
   order: 110
+- title: Talent Sourcer
+  url: https://apply.workable.com/skylight/j/10A411E526/
+  category: Business Strategy & Operations
+  location: Remote
+  order: 120
