--- a/_data/open_positions.yml
+++ b/_data/open_positions.yml
@@ -1,4 +1,4 @@
- Sample element:
+# Sample element:
 # - title: DevOps Engineer
 #   url: https://skylight.workable.com/jobs/604049
 #   category: Engineering
