fix typo software

--- a/_data/open_positions.yml
+++ b/_data/open_positions.yml
@@ -10,7 +10,7 @@
 # Research & Design, Product & Delivery, Engineering, Data,
 # Procurement, Transformation, Business Strategy & Operations
 
-- title: Sofware Engineer
+- title: Software Engineer
   url: https://skylight.workable.com/jobs/1083190
   category: Engineering
   location: Remote
