Update Tomi bio

--- a/_data/team.yml
+++ b/_data/team.yml
@@ -1273,9 +1273,10 @@
   image_description: Photo of Tomi Obikunle
   position: User Researcher
   bio: >
-    Tomi's a researcher who strives to meet and honor people
-    where they are. She specializes in continuous discovery, usability testing,
-    and user-centered design. Tomi lives in Illinois.
+    Tomi’s a researcher who strives to meet and honor people where they are.
+    Previously, she studied human development and led hands-on engineering
+    projects with kids. She now specializes in continuous discovery, usability
+    testing, and human-centered design. Tomi lives in Illinois.
   active: true
   order: 300
   socials:
