--- a/_data/team.yml
+++ b/_data/team.yml
@@ -984,7 +984,7 @@
     Web Design System. She specializes in front-end development, UX design,
     accessibility, and design systems. She's also a former
     Code for America fellow. Maya lives in California.
-  active: true
+  active: false
   order: 30
   socials:
     - name: Twitter
