--- a/_data/team.yml
+++ b/_data/team.yml
@@ -2186,7 +2186,7 @@
   image_description: Photo of Laura Kerry
   position: Content Designer
   bio: >
-    Laura's a content designer who specializes in content strategy, design, operations, and governance. She loves distilling complex information into human-centered content, and enjoys empowering others to do the same. Most recently, Laura worked at the NYC Mayor's Office for Economic Opportunity. She lives in New York.
+    Laura's a content designer who specializes in content strategy, design, operations, and governance. She loves distilling complex information into human-centered content, and enjoys empowering others to do the same. Most recently, Laura worked at the NYC Mayor's Office for Economic Opportunity. She lives in Hawaii.
   active: true
   order: 530
   socials:
