--- a/_data/team.yml
+++ b/_data/team.yml
@@ -56,7 +56,7 @@
     Sean's built and exited two tech startups, one of which was bought by
     IBM. He's been programming since he was six years old, and specializes in
     software engineering, product management, and cloud computing. Sean lives in
-    North Carolina.
+    South Carolina.
   active: true
   order: 200
   socials:
