--- a/_data/team.yml
+++ b/_data/team.yml
@@ -2368,7 +2368,7 @@
   image_description: Photo of Liz Fox
   position: Product Designer
   bio: >
-    Liz's a product designer and user researcher. Most recently, she worked on mobile products and design systems at Salesforce. She's passionate about building technology in service of the people who use it. Liz lives in Milwaukee, WI.
+    Liz's a product designer and user researcher. Most recently, she worked on mobile products and design systems at Salesforce. She's passionate about building technology in service of the people who use it. Liz lives in Wisconsin.
   active: true
   socials:
     - name: LinkedIn
