--- a/_data/team.yml
+++ b/_data/team.yml
@@ -2389,7 +2389,7 @@
   image_description: Photo of Rin Concordia
   position: DevOps Engineer
   bio: >
-    Rin's a software engineer-turned-SRE, with a penchant for public service. She's a former member of the United States Air Force Auxiliary — the Civil Air Patrol — where she served as a state-level IT director and rescue aircrew member. She's currently working on building out her own digital search and rescue system as an Auxiliarist with the United States Coast Guard. Rin lives in Georgia.
+    Rin's a software engineer-turned-SRE, with a penchant for public service. She's a former member of the United States Air Force Auxiliary — the Civil Air Patrol — where she served as a state-level IT director and rescue aircrew member. She's currently working on building out her own digital search and rescue system as an Auxiliarist with the United States Coast Guard. Rin lives in Illinois.
   active: true
   socials:
     - name: LinkedIn
