--- a/_data/team.yml
+++ b/_data/team.yml
@@ -1565,7 +1565,7 @@
   image_description: Illustration of Lucas Newman
   position: Software Engineer
   bio: >
-    Lucas's a software engineer with an unflinching faith in the ethical potential of
+    Lucas is a software engineer with an unflinching faith in the ethical potential of
     technology to solve big societal problems. He specializes in mobile application
     architecture and engineering. Lucas lives in Georgia.
   active: true
